--- a/pages/exercises/createExe/pages/tab2/index.wxml
+++ b/pages/exercises/createExe/pages/tab2/index.wxml
@@ -2,21 +2,38 @@
 <view class="canvas_container">
   <canvas bindtouchstart="onTouchStart" bindtouchmove="onTouchMove" bindtouchend="onTouchEnd" id="canvas" type="2d" class="canvas"></canvas>
 </view>
-  <view class="items">
+<!-- 选择题 -->
+<view class="Content" wx:if="{{data.exeType == 0}}">
+  
+  <view class="text">
+    {{id}}.
+    已知上图是一个无向图,从点0到点6的最短路径是22
+    请问边<text class="changeAble" bind:tap="change">'{{changeAbleEle.value}}'</text>值是多少__
+    <text class="point">{{value}}</text>
+  </view>
+  <view  class="options">
+    <view class="{{item == answer ? 'option active' : 'option'}}" id="{{index}}" wx:for="{{options}}" wx:key="index" hover-class="hover" >
+      {{index}}: {{item}}
+    </view>
+  </view>
+</view>
+<!-- 填空题 -->
+<view wx:if="{{data.exeType == 1 }}">
+</view>
+
+  <!-- <view class="items">
     <van-button  type="warning" bind:tap="initGra">初始化</van-button>
     <van-button  type="warning" bind:tap="del">删除</van-button>
     <van-button  type="warning" bind:tap="back">撤销</van-button>
-    <van-button  type="warning" bind:tap="algo">执行算法</van-button>
+    <van-button  type="warning" bind:tap="exeAlgo">执行算法</van-button>
 
   </view>
   <view style="font-size: 40rpx;">已知条件:</view>
-  <!-- key - value -->
-  <view class="terms">
+   key - value -->
+  <!-- <view class="terms">
     <view >起始点:0</view>
     <view >终点:6</view>
-    <!-- 算法执行结果 -->
-    <view >最短路径:{{value}}</view>  
+    <view >最短路径:{{ans}}</view>  
   </view>
-  <view style="font-size: 40rpx;">未知条件:</view>
-  <view></view>
+  <view style="font-size: 40rpx;">未知条件:</view> -->
 </view>
