fixed:修复一些警告

--- a/Components/customKeyboard/customKeyBoard.wxml
+++ b/Components/customKeyboard/customKeyBoard.wxml
@@ -1,4 +1,4 @@
-<view catch:tap="stop" style="translate:{{kb_translate}}" class="kb_container">
+<view catch:tap="stop" style="translate:{{kb_translate}}" class="kb_container page">
   <view class="{{item.select ? 'active':''}} {{item.cat}}" data-value="{{item.value}}" data-index="{{index}}" wx:for="{{arr}}" wx:key="index" catch:tap="onTap" bind:touchstart="handleTouchStart" bind:touchend="handleTouchEnd">
     {{item.value == -1 ? "" : item.value }}
   </view>
