--- a/Components/viewInput/viewInput.wxml
+++ b/Components/viewInput/viewInput.wxml
@@ -1,6 +1,6 @@
 <view class="viewInput ~{{Class}} vi-class " style="width: {{width}}; height: {{height}}; font-size: {{fontSize}};" catch:tap="catchTap">
   <text class="emptyCursor tag_text" style="font-size: {{cursorFont}}; display: {{ ( curIndex ==-1) && isFocus ? 'flex' :'none' }};">|</text>
-  <view class="item" bind:tap="onTap" id="item{{index}}" data-index="{{index}}" wx:for="{{inputValue}}" wx:key="{{index}}">
+  <view class="item" bind:tap="onTap" id="item{{index}}" data-index="{{index}}" wx:for="{{inputValue}}" wx:key="index">
     <view class="text">
       {{item}}
       <text style="font-size: {{cursorFont}}; display: {{ (index == curIndex) && isFocus ? 'flex' :'none' }};" class="cursor tag_text">|</text>
