--- a/pages/exercises/managerExe/index.wxss
+++ b/pages/exercises/managerExe/index.wxss
@@ -1,1 +1,9 @@
 /* pages/exercises/managerExe/index.wxss */
+.card_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin: 20rpx 0;
+}
